--- a/tc.org
+++ b/tc.org
@@ -26,7 +26,7 @@
 | קישור לזום | [[https://us02web.zoom.us/j/86309317409?pwd=jHoMQ3Ec3xE35eLLPF5tuagZl7Swsm.1][שעות הקבלה בזום בלבד!]]                      |
 | טלפון     | 055-6603392 (וואצאפ), 08-647-7873 (משרד) |
 
-* תקציר
+* תפקידי ועדת הוראה
 ** מול התלמידים
 *** במה ועדת הוראה מטפלת
 - בקשות למועדים מיוחדים
@@ -59,7 +59,7 @@
 
 * נהלים
 - שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. *אין שעות קבלה פרונטליות לועדת הוראה*
-- מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). *שעות הקבלה לקורסים שלי הם פרונטליים*
+- מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). *שעות הקבלה לקורסים שלי הם פרונטליות*
 - אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]]
   - גורמים שונים מטפלים בבקשות למועדים מיוחדים (המחלקה, הפקולטה, מדור בחינות, ולפעמים גם דיקנט הסטודנטים)
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
