--- a/tc.org
+++ b/tc.org
@@ -60,12 +60,12 @@
 * נהלים
 - שעות הקבלה לועדת הוראה הן בזום בלבד! במקרים חריגים ניתן לקבוע שעות קבלה מיוחדות, אבל גם הן תתקיימנה בזום או בטלפון. *אין שעות קבלה פרונטליות לועדת הוראה*
 - מיד בתום שעות הקבלה בזום, יש לי שעות קבלה עבור הקורס שאני מלמד (עקרונות הקומפילציה). *שעות הקבלה לקורסים שלי הם פרונטליות*
-- אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]]
+- אם אתם מבקשים מועד מיוחד, חשוב שתפנו אלי באמצעות טופס ה@@html:<b>בקשה למועד מיוחד</b>@@ שלצד הציון שלכם המופיע במערכת *גזר* (מידע אישי לסטודנט)
   - גורמים שונים מטפלים בבקשות למועדים מיוחדים (המחלקה, הפקולטה, מדור בחינות, ולפעמים גם דיקנט הסטודנטים)
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
-  - פניה דרך [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]] מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר
-  - אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם ל[[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]], כדי להבטיח שהטיפול יהיה נכון
-  - הטיפול בבקשה למועד מיוחד מתבצע מול [[https://in.bgu.ac.il/acadsec/DocLib2/exams.pdf][נוהל הבחינות האוניברסיטאי]] ומול פירוט ותיעוד הנסיבות המיוחדות של התלמיד. נכונותו או חוסר־נכונותו של המרצה לתת מועד מיוחד אינן מהוות שיקול לשאלת הזכאות למועד מיוחד. לכן אל נא תפנו למרצים בנושא, אלא הגישו פניה באמצעות [[https://cs-sr.cs.bgu.ac.il/][מערכת הפניות לוועדת הוראה]]
+  - פניה דרך טופס ה@@html:<b>בקשה למועד מיוחד</b>@@ מבטיחה שכל הגורמים הרלוונטיים יטפלו בפניה שלכם, לפי הסדר
+  - אם בכל זאת תפנו אלי באופן אישי, אני אפנה אתכם לטופס ה@@html:<b>בקשה למועד מיוחד</b>@@, כדי להבטיח שהטיפול יהיה נכון
+  - הטיפול בבקשה למועד מיוחד מתבצע מול [[https://in.bgu.ac.il/acadsec/DocLib2/exams.pdf][נוהל הבחינות האוניברסיטאי]] ומול פירוט ותיעוד הנסיבות המיוחדות של התלמיד. נכונותו או חוסר־נכונותו של המרצה לתת מועד מיוחד אינן מהוות שיקול לשאלת הזכאות למועד מיוחד. לכן אל נא תפנו למרצים בנושא, אלא הגישו פניה באמצעות טופס ה@@html:<b>בקשה למועד מיוחד</b>@@
 - אם אתם מעוניינים ללמוד בחו"ל במסגרת התוכנית לחילופי סטודנטים, עליכם לפנות ל[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] בפורטל הסטודנטיאלי שבאתר האוניברסיטה
   - נציג ועדת הוראה (אני) הוא *רק חוליה אחת* בטיפול בבקשה שלכם
   - עליכם לפנות באמצעות ה[[https://www.bgu.ac.il/general/studies-abroad/][טופס הממוחשב לחילופי סטודנטים]] על מנת להבטיח שכל הגורמים הרלוונטיים יראו את הפניה שלכם, וכל אחד יבצע את החלק שלו בטיפול
