--- a/tc.org
+++ b/tc.org
@@ -11,10 +11,11 @@
 
 * למי לפנות
 ועדת הוראה כוללת חברי סגל שונים, וכל אחד מטפל בנושאים שונים. על מנת לזרז את הטיפול בפניה שלכם ולא להטריד אנשים שלא יכולים לסייע לכם, אנא ודאו שאתם פונים לאנשים הנכונים:
-- אם אתם מילואימניקים, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם נפגעים או מפונים או מטפלים בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל[[https://omriazencot.com/][עמרי אייזנקוט]]
+- אם אתם *מילואימניקים*, אם שרתתם בכוחות הביטחון במלחמה האחרונה, אם אתם נפגעים או מפונים או מטפלים בבני משפחה מקרבה ראשונה שהם נפגעים או מפונים, פנו בבקשה ל[[https://omriazencot.com/][עמרי אייזנקוט]]
 - אם אתם תלמידי שנה א', בתוכנית החד־חוגית למדמ"ח או בתוכנית להנדסת תוכנה, פנו בבקשה ל[[mailto:gmayer@little-lisper.org][מאיר גולדברג]] (אלי)
 - אם אתם תלמידי שנה ב' או שנה מאוחרת יותר, בתוכנית החד־חוגית למדמ"ח או בתוכנית להנדסת תוכנה, פנו בבקשה ל[[https://www.cs.bgu.ac.il/~neimano/][עופר ניימן]]
-- אם אתם תלמידי התוכנית לביואינפורמטיקה, פנו בבקשה ל[[https://www.cs.bgu.ac.il/~keasar/][חן קיסר]]
+- אם אתם תלמידי *מדעי הנתונים*, פנו בבקשה ל[[https://www.cs.bgu.ac.il/~erant][ערן טרייסטר]]
+- אם אתם תלמידי *ביואינפורמטיקה*, פנו בבקשה ל[[https://www.cs.bgu.ac.il/~keasar/][חן קיסר]]
 - אם אתם תלמידי תוכניות משולבות, דו־חוגיות, תוכניות עם התמחות מיוחדת (לדוגמא, משחקי מחשב), פנו ל[[https://www.cs.bgu.ac.il/~asharf/][אנדרי שרף]]
 
 * יצירת קשר
